# FSCompanion

./: .gitignore  README.md
ControlPanel/: ControlPanel.ino
SimConnectBridge/: CMakeLists.txt  README.md  SimConnectBridge.sln
SimConnectBridge/SimConnectBridge/: App.xaml  App.xaml.cs  BridgeServer.cs  MainWindow.xaml  MainWindow.xaml.cs  SimConnectAdaptor.cs  SimConnectBridge.csproj
SimConnectBridge/SimConnectBridge/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
SimConnectBridge/src/: main.cpp
